<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Incentive</string>
    <string name="action_settings">Settings</string>
    <string name="text_behaviours">Behaviours</string>
    <string name="button_add_behaviour">+</string>
    <string name="text_behaviour_name">Name</string>
    <string name="text_complete_priority">Priority of Completion</string>
    <string name="title_activity_new_behaviour">New Behaviour</string>
    <string-array name="array_priority">
        <item >High</item>
        <item >Medium</item>
        <item >Low</item>
    </string-array>
    <string name="text_time_priority">Time to Complete</string>
    <string-array name="array_time">
        <item >Long</item>
        <item >Medium</item>
        <item >Short</item>
    </string-array>
    <string name="text_difficult_priority">Difficulty</string>
    <string name="text_benefit_priority">Benefit</string>
    <string name="button_new_behaviour">Add</string>
    <string name="alert_title_add_behaviour">YO</string>
    <string name="alert_message_add_behaviour">ADD A BEHAVIOUR NAME BIATCH</string>
    <string name="button_okay">OK</string>
    <string name="alert_title_existing_behaviour">BRO</string>
    <string name="alert_message_existing_behaviour">BROH, BROH. WHAT YOU TRYIN TA PULL BRA? BEHAVIOUR ALREADY EXISTS</string>
    <string name="button_cash_points">CHUH CHING!</string>
    <string name="text_points">Points:</string>
    <string name="alert_title_remove_behaviour">Remove</string>
    <string name="alert_message_remove_behaviour">Remove Behaviour</string>
    <string name="button_cancel">Cancel</string>
    <string name="text_dialog_point_message">1 Point = </string>
    <string name="text_dialog_point_title">Cash In?</string>
    <string name="text_dialog_dollar_val">Dollar val = </string>

</resources>
