<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_behaviours" 
        android:textAppearance="?android:attr/textAppearanceLarge" />
  

    <Button
        android:id="@+id/bAddBehaviour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView1"
        android:text="@string/button_add_behaviour" />

    <ListView
        android:id="@+id/behaviourList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bCashInPoints"
        android:layout_alignRight="@+id/bAddBehaviour"
        android:layout_below="@+id/bAddBehaviour"
        android:layout_marginTop="14dp" >

    </ListView>

    <Button
        android:id="@+id/bCashInPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/behaviourList"
        android:layout_marginBottom="17dp"
        android:text="@string/button_cash_points" />

    <TextView
        android:id="@+id/textTotalPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/bCashInPoints"
        android:layout_alignLeft="@+id/behaviourList"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
